fixed search button text align problem

--- a/src/stylesheets/common/_buttons.scss
+++ b/src/stylesheets/common/_buttons.scss
@@ -9,6 +9,10 @@
   padding: 12px 24px;
 }
 
+input[type="search"] + .btn {
+  padding: 0;
+}
+
 // Red button
 .btn-mapzen {
   // border-color: $mz-red;
